projects/ui/src/themes/default/form-field.scss
@use '../variables' as ARD;

ard-form-field,
ard-horizontal-form-field {
  display: block;
  width: 100%;
}

.ard-form-field,
.ard-horizontal-form-field {
  display: flex;
  flex-direction: column;

  .ard-label {
    padding: 0.25rem 0 0.125rem 0.125rem;
    font-size: 0.9375rem;
    font-weight: 500;

    .ard-label__required {
      .ard-label__required-optional-text {
        font-weight: 500;
        color: orangered;
        font-size: 112.5%;
        line-height: 1;
      }
    }
    .ard-label__optional {
      .ard-label__required-optional-text {
        font-weight: 400;
        font-size: 0.8125rem;
        font-style: italic;
      }
    }
  }
  .ard-form-field__hints {
    padding: 0.125rem 0 0.25rem 0.125rem;
    font-size: 0.8125rem;
    line-height: 1.1;

    &.ard-form-field__reserve-hint-line {
      box-sizing: content-box;
      min-height: 1.1em;
    }
  }
  .ard-form-field__hints-right,
  .ard-form-field__errors-right {
    > * {
      padding-left: 0.25rem;
    }
  }
  .ard-hint,
  .ard-error {
    font-size: 1em;
    line-height: 1.1;
    display: block;
    height: 1.1em;
  }
  .ard-hint {
    color: ARD.$text2;
  }
  .ard-error:not(.ard-hint-error),
  .ard-form-field__errors .ard-hint-error {
    color: ARD.$danger700;
    overflow: hidden;
  }
  .ard-error:not(.ard-hint-error) {
    animation: errorAppear 0.25s ARD.$timing-fn forwards;
  }

  &.ard-form-field__with-error {
    .ard-label {
      color: ARD.$danger700;
    }
  }
  &.ard-form-field__is-success {
    .ard-label {
      color: ARD.$success700;
    }
  }
  &.ard-form-field__control-disabled {
    .ard-label {
      opacity: 40%;
    }
    .ard-form-field__hints {
      opacity: 50%;
    }
  }
}
.ard-horizontal-form-field {
  align-items: flex-start;
  justify-content: stretch;
  flex-direction: row;
  gap: 0.5rem;

  .ard-form-field__label-container {
    width: var(--ard-horizontal-form-field-label-width, 12rem);
    height: ARD.$form-field-height;
    display: flex;
    align-items: center;
    justify-content: var(--ard-horizontal-form-field-label-align, flex-start);
  }
  .ard-form-field__non-label {
    flex-grow: 1;
  }

  &:has(.ard-form-field__input .ard-compact) {
    .ard-form-field__label-container {
      height: ARD.$form-field-compact-height;
    }
  }
}

@keyframes errorAppear {
  from {
    height: 0;
  }
  to {
    height: 1.1em;
  }
}

